--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -23,4 +23,4 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://192.168.242.132:8761/eureka/
+      defaultZone: http://192.168.242.132:8761/eureka/,http://192.168.242.132:8861/eureka/,http://192.168.242.132:8961/eureka/
